# ecalc

./: .gitignore  README.md  ecalc.desktop  ecalc.py  make_install.bat  make_install.sh  make_installer.bat  make_installer.sh  pyproject.toml  requirements.txt  tox.ini
ecalc/: calculator.py  ecalc.py  parser.py
extras/: make_installer.sh
icon/: ecalc.desktop
install/: ecalc.desktop  make_installer.bat  make_installer.sh
src/: ecalc.py
