[project]
name = "ecalc"
version = "1.2.7"
description = "Expression driven minimalistic calculator. Result is provided for every keyboard stroke."
authors = [
    {name = "Viktor Bekesi",email = "viktor.bekesi@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "customtkinter",
    "pillow (>=11.1.0,<12.0.0); sys_platform != 'win32'"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
